Fix spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -232,7 +232,7 @@ img.placeholder {
 }
 
 .prose pre code {
-  @apply text-gray-200;
+  @apply p-0 text-gray-200;
 }
 
 .prose blockquote {
